err/cloudfront-log-parser.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cloudfront_edge_codes'...
Listing './lib/python3.5/site-packages/cloudfront_edge_codes-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/cloudfront_log_parser'...
Listing './lib/python3.5/site-packages/cloudfront_log_parser-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/performance.py'...
***   File "./lib/python3.5/site-packages/tests/performance.py", line 42
    print "Total time: %.2fs Operations/s: %.2f (total %d operations)" % (
                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ua_parser'...
Listing './lib/python3.5/site-packages/ua_parser-0.7.3.dist-info'...
Listing './lib/python3.5/site-packages/user_agents'...
Listing './lib/python3.5/site-packages/user_agents-1.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
